Added contact page

--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,11 @@
    <div class="container-fluid header">
        <div class="row">
            <div class="col-md-6 col-xs-12">
-               <a href="javascript:void(0);" class="logo"></a>
+               <a href="index.html" class="logo"></a>
                <ul class="nav">
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class="active" href="javascript:void(0);">Contact</a></li>
                 </ul>
            </div>
            <div class="col-md-3 col-md-offset-3 col-xs-12">
@@ -65,46 +65,27 @@
        </div>
        <div class="row">
            <div class="col-xs-12 text-xs-center banner">
-               <img class="img-fluid-inline-block" src="img/amanda-wondergem.png" alt="">
-               <h1 class="sr-only">Amanda Wondergem</h1>
-               <h4 class="white">Web &amp; Motion Designer</h4>
+               <h1 class="yellow">Say hello!</h1>
+               <div class="white-underline"></div>
+               <h4 class="white">Get in touch</h4>
            </div>
        </div>
    </div><!--END HEADER-->
    
-   <!--HOME-->
-   <div class="container-fluid home">
-       <div class="row grey-bg">
+   <!--CONTACT-->
+   <div class="container-fluid contact">
+       <div class="row grey-bg content">
           <div class="col-md-4 col-md-offset-1 col-xs-12">
-              <img class="img-fluid" src="img/motion-design-illustration.png" alt="">
+              <img class="img-fluid" src="img/contact-illustration.png" alt="">
           </div>
            <div class="col-md-6 col-xs-12">
                <div class="orange-top-border"></div>
-               <h2>Motion Design</h2>
-               <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
+               <h2>Let the storytelling begin</h2>
+               <p>I am a graphic designer currently located in Toronto, Ontario. I love creating dynamic videos, animations and interactive websites. It’s all about visual storytelling and interaction to keep the user engaged. Feel free to contact me and say hello.</p>
+               <p class="bold orange email">designs@amandawondergem.com</p>
            </div>
        </div>
-       <div class="row white-bg">
-          <div class="col-md-6 col-md-offset-1 col-xs-12">
-               <div class="orange-top-border"></div>
-               <h2>Web &amp; UI Design</h2>
-               <p>I design responsive websites that look good on any device. It is the user interactions that enhance the experience.</p>
-           </div>
-           <div class="col-md-5 col-xs-12">
-              <img class="img-fluid" src="img/web-ui-illustration.png" alt="">
-          </div>
-       </div>
-       <div class="row grey-bg">
-           <div class="col-md-4 col-md-offset-1 col-xs-12">
-              <img class="img-fluid" src="img/front-end-illustration.png" alt="">
-          </div>
-           <div class="col-md-6 col-xs-12">
-               <div class="orange-top-border"></div>
-               <h2>Front-end Development</h2>
-               <p>I build websites so that I can bring my designs to life. My skills include HTML5, CSS3, Sass and Bootstrap.</p>
-           </div>
-       </div>
-   </div><!--END HOME-->
+   </div><!--END CONTACT-->
     
     <!--FOOTER-->
     <div class="container-fluid footer">
@@ -113,10 +94,10 @@
                <a href="javascript:void(0);" class="logo"></a>
                <div class="orange-underline"></div>
                 <ul class="nav">
-                    <li><a href="javascript:void(0);">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="portfolio.html">Portfolio</a></li>
                     <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="javascript:void(0);">Contact</a></li>
                 </ul>
                 <ul class="social-media">
                     <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
