--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
            <div class="col-md-6 col-xs-12">
                <div class="orange-top-border"></div>
                <h2>Let the storytelling begin</h2>
-               <p>I am a graphic designer currently located in Toronto, Ontario. I love creating dynamic videos, animations and interactive websites. It’s all about visual storytelling and interaction to keep the user engaged. Feel free to contact me and say hello.</p>
+               <p>I am a web and motion designer currently located in Toronto, Ontario. I love creating dynamic videos, animations and interactive websites. It’s all about visual storytelling and interaction to keep the user engaged. Feel free to contact me and say hello.</p>
                <p class="bold orange email">designs@amandawondergem.com</p>
            </div>
        </div>
