--- a/contact.html
+++ b/contact.html
@@ -63,18 +63,21 @@
            <div class="col-md-6 col-xs-12 hidden-md-up">
                <nav class="navbar hidden-md-up pull-xs-right mobile-nav-button-container">
                   <button class="navbar-toggler mobile-nav" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                    &#8801;
+                    &#8411;
                   </button>
                 </nav>
                <a href="index.html" class="logo"></a>
                <div class="nav-content-container">
-                    <div class="collapse navbar-toggleable-sm nav-content" id="exCollapsingNavbar">
+                    <div class="collapse navbar-toggleable-sm nav-content pull-sm-right" id="exCollapsingNavbar">
+                        <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        &#8855;
+                      </button>
                        <ul class="nav pull-sm-left">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
                             <li><a class="active" href="javascript:void(0);">Contact</a></li>
                         </ul>
-                        <ul class="social-media">
+                        <ul class="social-media pull-sm-right">
                             <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
                             <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
                             <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
@@ -83,7 +86,7 @@
                    </div>
                </div>
            </div>
-           <div class="col-md-7 col-xs-12 hidden-sm-down pull-md-left">
+           <div class="col-md-7 col-xs-12 hidden-sm-down pull-sm-left">
                <a href="index.html" class="logo"></a>
                <ul class="nav">
                     <li><a href="portfolio.html">Portfolio</a></li>
@@ -92,7 +95,7 @@
                 </ul>
            </div>
            <div class="col-md-5 col-xs-12 hidden-sm-down pull-md-right">
-               <ul class="social-media">
+               <ul class="social-media pull-md-right">
                     <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
                     <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
                     <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
@@ -112,10 +115,10 @@
    <!--CONTACT-->
    <div class="container-fluid contact">
        <div class="row grey-bg content center-content">
-          <div class="col-lg-4 col-md-offset-1 col-md-12">
+          <div class="col-lg-4 col-md-offset-1 col-md-12 col-xs-12">
               <img class="img-fluid contact-illustration" src="img/contact-illustration.png" alt="">
           </div>
-           <div class="col-lg-6 col-md-12">
+           <div class="col-lg-6 col-xs-12">
                <div class="orange-top-border"></div>
                <h2>Let the storytelling begin</h2>
                <p>I am a web and motion designer currently located in Toronto, Ontario. I love creating dynamic videos, animations and interactive websites. It’s all about visual storytelling and interaction to keep the user engaged. Feel free to contact me and say hello.</p>
