--- a/index.html
+++ b/index.html
@@ -60,12 +60,15 @@
            <div class="col-md-6 col-xs-12 hidden-md-up">
                <nav class="navbar hidden-md-up pull-xs-right mobile-nav-button-container">
                   <button class="navbar-toggler mobile-nav" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
-                    &#8801;
+                    &#8411;
                   </button>
                 </nav>
                <a href="javascript:void(0);" class="logo"></a>
                <div class="nav-content-container">
                     <div class="collapse navbar-toggleable-sm nav-content pull-sm-right" id="exCollapsingNavbar">
+                        <button class="navbar-toggler close-button" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
+                        &#8855;
+                      </button>
                        <ul class="nav pull-sm-left">
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
@@ -89,7 +92,7 @@
                 </ul>
            </div>
            <div class="col-md-5 col-xs-12 hidden-sm-down pull-md-right">
-               <ul class="social-media">
+               <ul class="social-media pull-md-right">
                     <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
                     <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
                     <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
@@ -109,30 +112,40 @@
    <!--HOME-->
    <div class="container-fluid home">
        <div class="row grey-bg center-content">
+         <div class="col-md-5 col-xs-12 hidden-md-up">
+               <div class="orange-top-border"></div>
+               <h2>Motion Design</h2>
+               <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
+           </div>
           <div class="col-md-4 col-md-offset-1 col-xs-12">
-              <img class="img-fluid" src="img/motion-design-illustration.png" alt="">
+              <img class="img-fluid illustration" src="img/motion-design-illustration.png" alt="">
           </div>
-           <div class="col-md-5 col-xs-12">
+           <div class="col-md-5 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Motion Design</h2>
                <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
            </div>
        </div>
        <div class="row white-bg center-content">
-          <div class="col-md-5 col-md-offset-1 col-xs-12">
+          <div class="col-md-5 col-md-offset-1 col-xs-12 col-xs-push-12">
                <div class="orange-top-border"></div>
                <h2>Web &amp; UI Design</h2>
                <p>I design responsive websites that look good on any device. It is the user interactions that enhance the experience.</p>
            </div>
            <div class="col-md-5 col-xs-12">
-              <img class="img-fluid web-ui-illustration" src="img/web-ui-illustration.png" alt="">
+              <img class="img-fluid illustration" src="img/web-ui-illustration.png" alt="">
           </div>
        </div>
        <div class="row grey-bg center-content">
+            <div class="col-md-5 col-xs-12 hidden-md-up">
+               <div class="orange-top-border"></div>
+               <h2>Front-end Development</h2>
+               <p>I build websites so that I can bring my designs to life. My skills include HTML5, CSS3, Sass and Bootstrap.</p>
+           </div>
            <div class="col-md-4 col-md-offset-1 col-xs-12">
-              <img class="img-fluid" src="img/front-end-illustration.png" alt="">
+              <img class="img-fluid illustration" src="img/front-end-illustration.png" alt="">
           </div>
-           <div class="col-md-5 col-xs-12">
+           <div class="col-md-5 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Front-end Development</h2>
                <p>I build websites so that I can bring my designs to life. My skills include HTML5, CSS3, Sass and Bootstrap.</p>
