--- a/portfolio.html
+++ b/portfolio.html
@@ -111,15 +111,30 @@
    
    <!--PORTFOLIO-->
    <div class="container-fluid portfolio">
-       <div class="row grey-bg center-content">
+       <div class="row grey-bg center-content portfolio-content">
            <div class="col-md-5 col-md-offset-1 col-xs-6">
                <div class="orange-top-border"></div>
                <h2>Demo Reel</h2>
                <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
-               <a class="button orange" href="javascript:void(0);"><span class="category-icon video"></span>See Project</a>
+               <a class="toggle-link closed" data-toggle="collapse" href="#demo-reel"><span>See Project</span></a>
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-6">
                <img class="img-fluid web-ui-illustration" src="img/test-img.png" alt="">
+           </div>
+       </div><!--END ROW-->
+       <div class="row grey-bg center-content portfolio-content collapse" id="demo-reel">
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
+               <div class="video-wrapper">
+                    <div class="inner-video-wrapper">
+                       <img class="ratio" src="http://placehold.it/16x9"/>
+                        <iframe src="https://player.vimeo.com/video/167224444" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+                </div>
+           </div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+               <h2>PLACEHOLDER</h2>
+               <p>CONTENT GOES HERE</p>
            </div>
        </div><!--END ROW-->
        <div class="row white-bg center-content">
