--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,6 @@
            </div>
        </div>
    </div><!--END HEADER-->
-   
    <!--PORTFOLIO-->
    <div class="container-fluid portfolio">
        <div class="row grey-bg center-content portfolio-content">
@@ -116,13 +115,14 @@
                <div class="orange-top-border"></div>
                <h2>Demo Reel</h2>
                <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
-               <a class="toggle-link closed" data-toggle="collapse" href="#demo-reel"><span>See Project</span></a>
+               <a class="toggle-link" data-toggle-class="#demo-reel"><span>See Project</span></a>
+               <!--a class="toggle-link closed" data-toggle="collapse" href="#demo-reel"><span>See Project</span></a-->
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-6">
                <img class="img-fluid web-ui-illustration" src="img/test-img.png" alt="">
            </div>
        </div><!--END ROW-->
-       <div class="row grey-bg center-content portfolio-content collapse" id="demo-reel">
+       <div class="row grey-bg center-content portfolio-content zeroHeight" id="demo-reel">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
