--- a/portfolio.html
+++ b/portfolio.html
@@ -111,17 +111,23 @@
    <!--PORTFOLIO-->
    <div class="container-fluid portfolio">
        <div class="row grey-bg center-content portfolio-content">
-           <div class="col-md-5 col-md-offset-1 col-xs-6">
+           <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Demo Reel</h2>
                <p>A collection of my best personal and commercial work.</p>
                <a class="toggle-link see-project" data-toggle-class="#demo-reel"><span> Project</span></a>
            </div>
-           <div class="col-md-5 col-md-offset-1 col-xs-6">
-               <img class="img-fluid web-ui-illustration" src="img/test-img.png" alt="">
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
+               <img class="img-fluid portfolio-thumbail" src="img/portfolio/demo-reel.png" alt="">
+           </div>
+           <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-md-up">
+               <div class="orange-top-border"></div>
+               <h2>Demo Reel</h2>
+               <p>A collection of my best personal and commercial work.</p>
+               <a class="toggle-link see-project" data-toggle-class="#demo-reel"><span> Project</span></a>
            </div>
        </div><!--END ROW-->
-       <div class="row grey-bg center-content portfolio-content details  zeroHeight" id="demo-reel">
+       <div class="row grey-bg center-content portfolio-content details zeroHeight" id="demo-reel">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
@@ -130,36 +136,78 @@
                         <iframe src="https://player.vimeo.com/video/167224444" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
                 </div>
-           </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <h2>PLACEHOLDER</h2>
-               <p>CONTENT GOES HERE</p>
            </div>
        </div><!--END ROW-->
        <div class="row white-bg center-content">
-           <div class="col-md-5 col-md-offset-1 col-xs-6">
-               <img class="img-fluid web-ui-illustration" src="img/test-img.png" alt="">
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
+               <img class="img-fluid portfolio-thumbail" src="img/portfolio/camping-icon-animation.png" alt="">
            </div>
-           <div class="col-md-5 col-md-offset-1 col-xs-6">
+           <div class="col-md-5 col-md-offset-1 col-xs12">
                <div class="orange-top-border"></div>
-               <h2>Line animation</h2>
-               <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
-               <a class="toggle-link see-project" data-toggle-class="#line-animation"><span> Project</span></a>
+               <h2>Camping icon animation</h2>
+               <p>A personal project where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
+               <a class="toggle-link see-project" data-toggle-class="#camping-icon-animation"><span> Project</span></a>
            </div>
        </div><!--END ROW-->
-       <div class="row white-bg center-content portfolio-content details zeroHeight" id="line-animation">
+       <div class="row white-bg center-content portfolio-content details zeroHeight" id="camping-icon-animation">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
                     <div class="inner-video-wrapper">
                        <img class="ratio" src="http://placehold.it/16x9"/>
-                        <iframe src="https://player.vimeo.com/video/167224444" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                        <iframe src="https://player.vimeo.com/video/165732862" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                     </div>
                 </div>
            </div>
-           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
-               <h2>PLACEHOLDER</h2>
-               <p>CONTENT GOES HERE</p>
+       </div><!--END ROW-->
+       <div class="row grey-bg center-content">
+           <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-sm-down">
+               <div class="orange-top-border"></div>
+               <h2>Get active commercial</h2>
+               <p>A personal project where I focused on morphing techniques and transitions.</p>
+               <a class="toggle-link see-project" data-toggle-class="#get-active"><span> Project</span></a>
+           </div>
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
+               <img class="img-fluid portfolio-thumbail" src="img/portfolio/get-active.png" alt="">
+           </div>
+           <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-md-up">
+               <div class="orange-top-border"></div>
+               <h2>Get active commercial</h2>
+               <p>A personal project where I focused on morphing techniques and transitions.</p>
+               <a class="toggle-link see-project" data-toggle-class="#get-active"><span> Project</span></a>
+           </div>
+       </div><!--END ROW-->
+       <div class="row grey-bg center-content portfolio-content details zeroHeight" id="get-active">
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
+               <div class="video-wrapper">
+                    <div class="inner-video-wrapper">
+                       <img class="ratio" src="http://placehold.it/16x9"/>
+                        <iframe src="https://player.vimeo.com/video/88415356" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+                </div>
+           </div>
+       </div><!--END ROW-->
+       <div class="row white-bg center-content">
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
+               <img class="img-fluid portfolio-thumbail" src="img/portfolio/corbin-visual.png" alt="">
+           </div>
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
+               <div class="orange-top-border"></div>
+               <h2>Corbin Visual App | Your Project In Your Hands</h2>
+               <p>I created a storyboard, designed and animated this motion graphics videos to promote the Corbin Visual App for smartphones. The focus is on making the client feel more at ease when working on a project with Corbin Visual, through the use of the app.</p>
+               <a class="toggle-link see-project" data-toggle-class="#corbin-visual"><span> Project</span></a>
+           </div>
+       </div><!--END ROW-->
+       <div class="row white-bg center-content portfolio-content details zeroHeight" id="corbin-visual">
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
+               <div class="video-wrapper">
+                    <div class="inner-video-wrapper">
+                       <img class="ratio" src="http://placehold.it/16x9"/>
+                        <iframe src="https://player.vimeo.com/video/95443860" width="1920" height="1080" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    </div>
+                </div>
            </div>
        </div><!--END ROW-->
    </div><!--END PORTFOLIO-->
