--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,8 @@
        </div>
        <div class="row">
            <div class="col-xs-12 text-xs-center banner">
-               <img class="img-fluid-inline-block" src="img/visual-storytelling.png" alt="">
+               <img class="img-fluid-inline-block hidden-sm-down" src="img/visual-storytelling.png" alt="">
+               <img class="img-fluid-inline-block hidden-md-up" src="img/visual-storytelling-mobile.png" alt="">
                <h1 class="sr-only">Visual Storytelling</h1>
                <h4 class="white">Design Portfolio</h4>
            </div>
@@ -142,7 +143,7 @@
            <div class="col-md-5 col-md-offset-1 col-xs-12">
                <img class="img-fluid portfolio-thumbail" src="img/portfolio/camping-icon-animation.png" alt="">
            </div>
-           <div class="col-md-5 col-md-offset-1 col-xs12">
+           <div class="col-md-5 col-md-offset-1 col-xs-12">
                <div class="orange-top-border"></div>
                <h2>Camping icon animation</h2>
                <p>A personal project where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
@@ -194,7 +195,7 @@
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-12">
                <div class="orange-top-border"></div>
-               <h2>Corbin Visual App | Your Project In Your Hands</h2>
+               <h2>Corbin Visual App |&nbsp;Your Project In Your Hands</h2>
                <p>I created a storyboard, designed and animated this motion graphics videos to promote the Corbin Visual App for smartphones. The focus is on making the client feel more at ease when working on a project with Corbin Visual, through the use of the app.</p>
                <a class="toggle-link see-project" data-toggle-class="#corbin-visual"><span> Project</span></a>
            </div>
