--- a/portfolio.html
+++ b/portfolio.html
@@ -130,6 +130,9 @@
        </div><!--END ROW-->
        <div class="row grey-bg center-content portfolio-content details zeroHeight" id="demo-reel">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+               <a class="toggle-link close" data-toggle-class="#demo-reel"></a>
+           </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
                     <div class="inner-video-wrapper">
@@ -152,6 +155,9 @@
        </div><!--END ROW-->
        <div class="row white-bg center-content portfolio-content details zeroHeight" id="camping-icon-animation">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+               <a class="toggle-link close" data-toggle-class="#camping-icon-animation"></a>
+           </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
                     <div class="inner-video-wrapper">
@@ -180,6 +186,9 @@
        </div><!--END ROW-->
        <div class="row grey-bg center-content portfolio-content details zeroHeight" id="get-active">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+               <a class="toggle-link close" data-toggle-class="#get-active"></a>
+           </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
                     <div class="inner-video-wrapper">
@@ -202,6 +211,9 @@
        </div><!--END ROW-->
        <div class="row white-bg center-content portfolio-content details zeroHeight" id="corbin-visual">
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 orange-border"></div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12">
+               <a class="toggle-link close" data-toggle-class="#corbin-visual"></a>
+           </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 more-content">
                <div class="video-wrapper">
                     <div class="inner-video-wrapper">
