Updates and a few fixes

--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
                         &#8855;
                       </button>
                        <ul class="nav pull-sm-left">
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
                             <li><a class="active" href="javascript:void(0);">Contact</a></li>
