--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         &#8855;
                       </button>
                        <ul class="nav pull-sm-left">
+                            <li><a class="active" href="javascript:void(0);">Home</a></li>
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
@@ -115,7 +116,7 @@
          <div class="col-md-5 col-xs-12 hidden-md-up">
                <div class="orange-top-border"></div>
                <h2>Motion Design</h2>
-               <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
+               <p>Motion design is about visual storytelling. I animate explainer videos, as well as microinteractions in web and ui design. I love capturing ideas and bringing them to life with animation.</p>
            </div>
           <div class="col-md-5 col-md-offset-1 col-xs-12">
               <img class="img-fluid illustration" src="img/motion-design-illustration.png" alt="">
@@ -123,14 +124,14 @@
            <div class="col-md-5 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Motion Design</h2>
-               <p>Motion design is about visual storytelling. I love capturing ideas and bringing them to life with animation. This includes animated explainer videos, as well as microinteractions in web and ui design.</p>
+               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and ui design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
            </div>
        </div>
        <div class="row white-bg center-content">
           <div class="col-md-5 col-md-offset-1 col-xs-12 col-xs-push-12">
                <div class="orange-top-border"></div>
                <h2>Web &amp; UI Design</h2>
-               <p>I design responsive websites that look good on any device. It is the user interactions that enhance the experience.</p>
+               <p>I solve the target audience's problem by designing responsive websites that look good on any device. It is the user interactions that enhance the experience.</p>
            </div>
            <div class="col-md-5 col-xs-12">
               <img class="img-fluid illustration" src="img/web-ui-illustration.png" alt="">
