--- a/portfolio.html
+++ b/portfolio.html
@@ -70,6 +70,7 @@
                         &#8855;
                       </button>
                        <ul class="nav pull-sm-left">
+                            <li><a href="index.html">Home</a></li>
                             <li><a class="active" href="javascript:void(0);">Portfolio</a></li>
                             <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
                             <li><a href="contact.html">Contact</a></li>
@@ -116,7 +117,7 @@
                <div class="orange-top-border"></div>
                <h2>Demo Reel</h2>
                <p>A collection of my best personal and commercial work.</p>
-               <a class="toggle-link see-project" data-toggle-class="#demo-reel"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#demo-reel">See Project</a>
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-12">
                <img class="img-fluid portfolio-thumbail" src="img/portfolio/demo-reel.png" alt="">
@@ -125,7 +126,7 @@
                <div class="orange-top-border"></div>
                <h2>Demo Reel</h2>
                <p>A collection of my best personal and commercial work.</p>
-               <a class="toggle-link see-project" data-toggle-class="#demo-reel"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#demo-reel">See Project</a>
            </div>
        </div><!--END ROW-->
        <div class="row grey-bg center-content portfolio-content details zeroHeight" id="demo-reel">
@@ -150,7 +151,7 @@
                <div class="orange-top-border"></div>
                <h2>Camping icon animation</h2>
                <p>A personal project where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
-               <a class="toggle-link see-project" data-toggle-class="#camping-icon-animation"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#camping-icon-animation">See Project</a>
            </div>
        </div><!--END ROW-->
        <div class="row white-bg center-content portfolio-content details zeroHeight" id="camping-icon-animation">
@@ -172,7 +173,7 @@
                <div class="orange-top-border"></div>
                <h2>Get active commercial</h2>
                <p>A personal project where I focused on morphing techniques and transitions.</p>
-               <a class="toggle-link see-project" data-toggle-class="#get-active"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#get-active">See Project</a>
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-12">
                <img class="img-fluid portfolio-thumbail" src="img/portfolio/get-active.png" alt="">
@@ -181,7 +182,7 @@
                <div class="orange-top-border"></div>
                <h2>Get active commercial</h2>
                <p>A personal project where I focused on morphing techniques and transitions.</p>
-               <a class="toggle-link see-project" data-toggle-class="#get-active"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#get-active">See Project</a>
            </div>
        </div><!--END ROW-->
        <div class="row grey-bg center-content portfolio-content details zeroHeight" id="get-active">
@@ -206,7 +207,7 @@
                <div class="orange-top-border"></div>
                <h2>Corbin Visual App |&nbsp;Your Project In Your Hands</h2>
                <p>I created a storyboard, designed and animated this motion graphics videos to promote the Corbin Visual App for smartphones. The focus is on making the client feel more at ease when working on a project with Corbin Visual, through the use of the app.</p>
-               <a class="toggle-link see-project" data-toggle-class="#corbin-visual"><span> Project</span></a>
+               <a class="toggle-link see-project" data-toggle-class="#corbin-visual">See Project</a>
            </div>
        </div><!--END ROW-->
        <div class="row white-bg center-content portfolio-content details zeroHeight" id="corbin-visual">
