Case study - Corbin visual
Added content to the case study for Corbin Visual video on the
portfolio page.

--- a/portfolio.html
+++ b/portfolio.html
@@ -169,24 +169,39 @@
                 </div>
            </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
-               <h3>The Challenge</h3>
-               <div class="row">
-                   <div class="col-xs-12">
+               <div class="row center-content">
+                   <div class="col-md-6 col-xs-12 text">
+                      <h3>The Challenge</h3>
                        <p>To create animated video that promotes the Corbin Visual app and explains its core purpose: to make client feel more at ease when working on their projects.</p>
                    </div>
-                   <div class="col-sm-6 col-xs-12">
-                       <img class="img-fluid" src="/img/portfolio/corbin-visual-still-1.jpg" alt="">
+                   <div class="col-md-6 col-xs-12">
+                       <img class="img-fluid" src="img/portfolio/corbin-visual-still-1.jpg" alt="">
                    </div>
                </div>
            </div>
            <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
-               <h3>The Process</h3>
-               <div class="row">
-                   <div class="col-sm-6 col-xs-12">
-                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client have a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
+               <div class="row center-content">
+                  <div class="col-md-6 col-xs-12 hidden-md-up text">
+                      <h3>The Process</h3>
+                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
                    </div>
-                   <div class="col-sm-6 col-xs-12">
-                       
+                   <div class="col-md-6 col-xs-12">
+                       <img class="img-fluid" src="img/portfolio/corbin-visual-storyboard.jpg" alt="">
+                   </div>
+                   <div class="col-md-6 col-xs-12 hidden-sm-down text">
+                      <h3>The Process</h3>
+                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
+                   </div>
+               </div>
+           </div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
+               <div class="row center-content">
+                   <div class="col-md-6 col-xs-12 text">
+                      <h3>The Result</h3>
+                       <p>An animated explainer video that puts clients at ease when working with Corbin Visual.</p>
+                   </div>
+                   <div class="col-md-6 col-xs-12">
+                       <img class="img-fluid" src="img/portfolio/corbin-visual-still-2.jpg" alt="">
                    </div>
                </div>
            </div>
