FIxed spelling mistake

--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
                <div class="row center-content">
                    <div class="col-md-6 col-xs-12 text">
                       <h3>The Challenge</h3>
-                       <p>Many outdoor enthusiasts hear about new places by word of mouth or by researching them online. How do you do which places are good? Often times there will be ratings on Google, but then you also have to go the each individual site to find more about the new destination. This can be a tedious and time consuming process. The solution to this problem is combine all of this information into an app. Users can discover new adventure destinations, see ratings, view images and contribute all in one place.</p>
+                       <p>Many outdoor enthusiasts hear about new places by word of mouth or by researching them online. How do you determine which places are good? Often times there will be ratings on Google, but then you also have to go the each individual site to find more about the new destination. This can be a tedious and time consuming process. The solution to this problem is combine all of this information into an app. Users can discover new adventure destinations, see ratings, view images and contribute all in one place.</p>
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <img class="img-fluid" src="img/portfolio//adventure-finder-app-destination.jpg" alt="">
