Fixed spelling mistakes and grammar

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
          <div class="col-md-5 col-xs-12 hidden-md-up">
                <div class="orange-top-border"></div>
                <h2>Motion Design</h2>
-               <p>Motion design is about visual storytelling. I animate explainer videos, as well as microinteractions in web and ui design. I love capturing ideas and bringing them to life with animation.</p>
+               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and UI design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
            </div>
           <div class="col-md-5 col-md-offset-1 col-xs-12">
               <img class="img-fluid illustration" src="img/motion-design-illustration.png" alt="">
@@ -124,7 +124,7 @@
            <div class="col-md-5 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Motion Design</h2>
-               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and ui design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
+               <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and UI design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
            </div>
        </div>
        <div class="row white-bg center-content">
