--- a/portfolio.html
+++ b/portfolio.html
@@ -132,7 +132,7 @@
                <div class="row center-content">
                    <div class="col-md-6 col-xs-12 text">
                       <h3>The Challenge</h3>
-                       <p>Many outdoor enthusiasts hear about new places by word of mouth or by researching them online. How do you determine which places are good? Often times there will be ratings on Google, but then you also have to go the each individual site to find more about the new destination. This can be a tedious and time consuming process. The solution to this problem is combine all of this information into an app. Users can discover new adventure destinations, see ratings, view images and contribute all in one place.</p>
+                       <p>Many outdoor enthusiasts hear about new places by word of mouth or by researching them online. How do you determine which places are good? Often times there will be ratings on Google, but then you also have to go the each individual site to find more about the new destination. This can be a tedious and time consuming process. The solution to this problem is combine all of this information into an app. Users can discover new adventure destinations, see ratings, view images and write reviews all in one place.</p>
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <img class="img-fluid" src="img/portfolio//adventure-finder-app-destination.jpg" alt="">
@@ -143,7 +143,7 @@
                <div class="row center-content">
                   <div class="col-md-6 col-xs-12 hidden-md-up text">
                       <h3>The Process</h3>
-                       <p>The animation was storyboarded out to show how each scene would flow into the next. The story starts off with a client that has a big idea, but they are not sure how to nurture it and bring it to life. That's where Corbin Visual can help. In the app, you can view other successful projects that were created by Corbin Visual. You can also manage your project and add input.</p>
+                       <p>I started with a flow chart of how the user may interact with the app, depending on if the user has an account already. If it is a new user, they start off by picking what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). From there, the user can view more details about specific locations. After the flow chart was thought out, I began designing screens and prototyping the app using InVision. This prototype gives a true feel of how the user would interact with the app.</p>
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <a class="popup-button" href="javascript:void(0);" data-trigger=".camping-icon-animation-popup" data-class="show">
@@ -152,7 +152,7 @@
                    </div>
                    <div class="col-md-6 col-xs-12 hidden-sm-down text">
                       <h3>The Process</h3>
-                       <p>I started with a flow chart of how the user user may interact with the app, depending on if the user has an account already. If it is a new user, they start off by picking what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). From there, the user can view more details about specific locations. After the flow chart was thought out, I began designing screens and prototyping the app using InVision. This gave a true feel of how the user could interact with the app.</p>
+                       <p>I started with a flow chart of how the user may interact with the app, depending on if the user has an account already. If it is a new user, they start off by picking what type of adventure they are looking for (ie. hiking, canoeing, camping, etc.). From there, the user can view more details about specific locations. After the flow chart was thought out, I began designing screens and prototyping the app using InVision. This prototype gives a true feel of how the user would interact with the app.</p>
                        <a class="toggle-link see-project" href="https://invis.io/PX8783MQR" target="_blank">See prototype</a>
                    </div>
                </div>
@@ -161,7 +161,7 @@
                <div class="row center-content">
                    <div class="col-md-6 col-xs-12 text">
                       <h3>The Result</h3>
-                       <p>Throughout the thought process of designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There is also the option to view adventure locations near the user’s current GPS location. This is useful is they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
+                       <p>Throughout the thought process of designing the app, some useful features that came to mind to enhance the user experience include uploading pictures, adding the destination to their list and rating specific locations. There is also the option to view adventure locations near the user’s current GPS location. This option is useful if they are unfamiliar with the area and are looking for an adventure or if they are looking for something new to check out near where they live. The Adventure Finder app has all of the information in one place. This app will allow nature lovers to spend more time experiencing their adventures and less time finding and deciding upon them.</p>
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <img class="img-fluid" src="img/portfolio/adventure-finder-app-categories.png" alt="">
@@ -222,7 +222,7 @@
                <div class="row center-content">
                    <div class="col-md-6 col-xs-12 text">
                       <h3>The Challenge</h3>
-                       <p>To create animated video that promotes the Corbin Visual app and explains its core purpose: to make client feel more at ease when working on their projects.</p>
+                       <p>To an create animated video that promotes the Corbin Visual app and explains its core purpose: to make clients feel more at ease when working on their projects.</p>
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <img class="img-fluid" src="img/portfolio/corbin-visual-still-1.jpg" alt="">
@@ -266,7 +266,7 @@
            <div class="col-md-5 col-md-offset-1 col-xs-12">
                <div class="orange-top-border"></div>
                <h2>Camping icon animation</h2>
-               <p>A personal project where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
+               <p>This is a personal project, where I experimented with line animation. I love camping, so it was the perfect inspiration for this piece!</p>
                <a class="toggle-link see-project" data-toggle-class="#camping-icon-animation">See Project</a>
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-12">
@@ -295,7 +295,7 @@
            <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-sm-down">
                <div class="orange-top-border"></div>
                <h2>Get active commercial</h2>
-               <p>A commercial promotes a healthy, active lifestyle. For this piece, I focused on morphing techniques and transitions between scenes.</p>
+               <p>This commercial promotes a healthy, active lifestyle. For this piece, I focused on morphing techniques and transitions between scenes.</p>
                <a class="toggle-link see-project" data-toggle-class="#get-active">See Project</a>
            </div>
            <div class="col-md-5 col-md-offset-1 col-xs-12 hidden-md-up">
