Adventure Finder website design
Added website design and description to the Adventure Finder case study.

--- a/portfolio.html
+++ b/portfolio.html
@@ -168,6 +168,21 @@
                    </div>
                </div>
            </div>
+           <div class="col-sm-10 col-sm-offset-1 col-xs-12 explanation-text">
+               <div class="row center-content">
+                  <div class="col-md-6 col-xs-12 hidden-md-up text">
+                      <h3>Promoting the App</h3>
+                       <p>The website for the Adventure Finder app provides details and more information about the app. It is a perfect tool for sharing on social media to promote the app and ultimately result in app downloads.</p>
+                   </div>
+                   <div class="col-md-6 col-xs-12">
+                       <img class="img-fluid" src="img/portfolio/adventure-finder-website.png" alt="">
+                   </div>
+                   <div class="col-md-6 col-xs-12 hidden-sm-down text">
+                      <h3>Promoting the App</h3>
+                       <p>The website for the Adventure Finder app provides details and more information about the app. It is a perfect tool for sharing on social media to promote the app and ultimately result in app downloads.</p>
+                   </div>
+               </div>
+           </div>
        </div><!--END ROW-->
        
        <div class="row white-bg center-content portfolio-content">
