--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@
                    </div>
                    <div class="col-md-6 col-xs-12">
                        <a class="popup-button" href="javascript:void(0);" data-trigger=".camping-icon-animation-popup" data-class="show">
-                            <img class="img-fluid" src="img/portfolio/adventure-finder-app-user-flow.png" alt="">
+                            <img class="img-fluid" src="img/portfolio/adventure-finder-app-user-flow.png" alt="" style="border:2px solid #f2f2f2;">
                         </a>
                    </div>
                    <div class="col-md-6 col-xs-12 hidden-sm-down text">
