--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
                 <div class="row">
                     <div class="col-xs-12">
                         <div class="skills-wrapper">
-                            <img class="img-fluid illustration" src="img/motion-design-illustration.png" alt="">
+                            <div class="illustration">
+                                <img class="img-fluid" src="img/motion-design-illustration.png" alt="">
+                            </div>
                            <div class="text">
-                               <div class="orange-top-border"></div>
                                <h2>Motion Design</h2>
                                <p>Motion design is about visual storytelling. I animate videos to convey information, such as explaining about a product or service. Functional animation, such as microinteractions in web and UI design is also part of my skillset. I love capturing ideas and bringing them to life with animation.</p>
                            </div>
@@ -186,28 +187,49 @@
           <div class="container">
              <div class="row">
                     <div class="col-xs-12">
-                        <div class="skills-wrapper">
-                           <div class="text">
-                               <div class="orange-top-border"></div>
-                                <h2>Web &amp; UI Design</h2>
-                                <p>I solve the target audience's problem by designing responsive websites that look good on any device. It is the user interactions that enhance the experience.</p>
+                        <div class="skills-wrapper switch-order">
+                            <div class="illustration">
+                                <img class="img-fluid" src="img/web-ui-illustration.png" alt="">
                             </div>
-                            <img class="img-fluid illustration" src="img/web-ui-illustration.png" alt="">
+                           <div class="text">
+                                <h2>Web &amp; UI Design</h2>
+                                <p>I design responsive websites that look good on any device. To enhance the experience, I put emphasis on user interactions.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
           </div>
       </div>
-       <div class="grey-bg">
+      <div class="grey-bg">
            <div class="container">
               <div class="row">
                     <div class="col-xs-12">
                         <div class="skills-wrapper">
-                          <img class="img-fluid illustration" src="img/front-end-illustration.png" alt="">
+                          <div class="illustration">
+                              <img class="img-fluid" src="img/icon-illustration.png" alt="">
+                          </div>
+                           <div class="text">
+                               <div class="orange-top-border"></div>
+                               <h2>Illustration</h2>
+                               <p>I create custom iconography, characters and other graphical elements to enhance my designs.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+           </div>
+       </div>
+       <div class="white-bg">
+           <div class="container">
+              <div class="row">
+                    <div class="col-xs-12">
+                        <div class="skills-wrapper switch-order">
+                          <div class="illustration">
+                                <img class="img-fluid" src="img/front-end-illustration.png" alt="">
+                            </div>
                            <div class="text">
                                <div class="orange-top-border"></div>
                                <h2>Front-end Web Development</h2>
-                               <p>I build websites so that I can bring my designs to life. My skills include HTML, CSS, Sass and responsive web layouts (ie. Bootstrap).</p>
+                               <p>I build websites to bring my designs to life. My skills include HTML and CSS. I have also worked with responsive frameworks (ie. Bootstrap) and Sass.</p>
                             </div>
                         </div>
                     </div>
