--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
    <!--HEADER-->
    <div class="header">
        <div class="container">
-           <div class="row nav-container">
+<!--           <div class="row nav-container">-->
+<!--
                <div class="col-md-6 col-xs-12 hidden-md-up">
                    <a href="javascript:void(0);" class="logo"></a>
                    <div class="nav-content-container">
-
                         <div class="nav-content pull-sm-right">
                             <a class="menu" href="javascript:void(0);">
                                 <span></span>
@@ -85,6 +85,8 @@
                        </div>
                    </div>
                </div>
+-->
+<!--
                <div class="col-md-6 col-xs-12 hidden-md-up">
                    <nav class="navbar hidden-md-up pull-xs-right mobile-nav-button-container">
                       <button class="navbar-toggler mobile-nav" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
@@ -112,6 +114,8 @@
                        </div>
                    </div>
                </div>
+-->
+<!--
                <div class="col-md-7 col-xs-12 hidden-sm-down pull-sm-left">
                    <a href="javascript:void(0);" class="logo"></a>
                    <ul class="nav">
@@ -120,6 +124,8 @@
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
                </div>
+-->
+<!--
                <div class="col-md-5 col-xs-12 hidden-sm-down pull-md-right">
                    <ul class="social-media pull-md-right">
                         <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
@@ -128,7 +134,35 @@
                         <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
                     </ul>
                </div>
-           </div>
+-->
+<!--           </div>-->
+          <div class="row">
+              <div class="col-xs-12">
+                  <div class="logo-nav-wrapper">
+                      <a href="javascript:void(0);" class="logo"></a>
+                      <a class="menu-xs hidden-md-up" href="javascript:void(0);">
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                          <span></span>
+                      </a>
+                      <div class="navi-container">
+                          <ul class="nav">
+                            <li><a class="active" href="javascript:void(0);">Home</a></li>
+                            <li><a href="portfolio.html">Portfolio</a></li>
+                            <li><a href="https://amandawondergem.wordpress.com/" target="_blank">Blog</a></li>
+                            <li><a href="contact.html">Contact</a></li>
+                         </ul>
+                         <ul class="social-media">
+                            <li><a class="behance" href="http://www.behance.net/wondergemamandac31e" target="_blank" title="Behance"><span class="sr-only">Behance</span></a></li>
+                            <li><a class="linkedin" href="https://www.linkedin.com/in/amandawondergem" target="_blank" title="LinkedIn"><span class="sr-only">LinkedIn</span></a></li>
+                            <li><a class="vimeo" href="https://vimeo.com/amandawondergem" target="_blank" title="Vimeo"><span class="sr-only">Vimeo</span></a></li>
+                            <li><a class="youtube" href="http://www.youtube.com/channel/UCCeOnm4B_8i90XEo7fGClig/videos" target="_blank" title="YouTube"><span class="sr-only">YouTube</span></a></li>
+                         </ul>
+                      </div>
+                  </div>
+              </div>
+          </div>
            <div class="row">
                <div class="col-xs-12 text-xs-center banner">
                    <img class="img-fluid-inline-block" src="img/amanda-wondergem.png" alt="">
